# lab-5-7-team

./: CMakeLists.txt
src/: CMakeLists.txt  Document.cpp  Document.h  Document.hpp  DocumentBuilder.cpp  DocumentBuilder.hpp  IndexError.hpp  IndexStore.cpp  IndexStore.hpp  InvertedIndex.cpp  InvertedIndex.hpp  Result.cpp  Result.hpp  UpdateTransaction.cpp  UpdateTransaction.hpp
src/document_builder/builder_cpp/: builder.cpp
src/document_builder/builder_hpp/: builder.hpp
tests/: CMakeLists.txt  tests.cpp
